[gd_scene load_steps=37 format=3 uid="uid://yo1724cvykqi"]

[ext_resource type="Script" uid="uid://dniwlndvwgghr" path="res://scripts/player.gd" id="1_p0vlq"]
[ext_resource type="Texture2D" uid="uid://be7v2yowik4i3" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="2_v6fml"]
[ext_resource type="Texture2D" uid="uid://e03rq1d2cqwn" path="res://assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier(Split Effects)/Soldier.png" id="3_3li8b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("3_3li8b")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("3_3li8b")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("3_3li8b")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("3_3li8b")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("3_3li8b")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("3_3li8b")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("3_3li8b")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("3_3li8b")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("2_v6fml")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("2_v6fml")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("2_v6fml")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("2_v6fml")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("2_v6fml")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("2_v6fml")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("3_3li8b")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("3_3li8b")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("3_3li8b")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("3_3li8b")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("3_3li8b")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("3_3li8b")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("3_3li8b")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("3_3li8b")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("3_3li8b")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("3_3li8b")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("3_3li8b")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("3_3li8b")
region = Rect2(500, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("3_3li8b")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("3_3li8b")
region = Rect2(700, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("3_3li8b")
region = Rect2(800, 400, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_bruh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}],
"loop": true,
"name": &"Damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}],
"loop": true,
"name": &"Dead animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}],
"loop": true,
"name": &"Sword attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v6fml"]
radius = 11.7046995

[sub_resource type="CircleShape2D" id="CircleShape2D_3li8b"]
radius = 7.28011

[sub_resource type="AnimatedTexture" id="AnimatedTexture_v6fml"]

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_p0vlq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -12.999999)
scale = Vector2(1.99, 1.7)
sprite_frames = SubResource("SpriteFrames_bruh7")
animation = &"Sword attack"

[node name="BowPosition" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(2.0100503, 2.3529408)
scale = Vector2(0.5025126, 0.58823526)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_v6fml")

[node name="AttackArea" type="Area2D" parent="." groups=["player"]]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(20, -13)
shape = SubResource("CircleShape2D_3li8b")

[node name="EquipmentSocket" type="Node2D" parent="."]
position = Vector2(21, -48)

[node name="WeaponSprite" type="Sprite2D" parent="EquipmentSocket"]
visible = false
texture = SubResource("AnimatedTexture_v6fml")

[node name="ChestSprite" type="Sprite2D" parent="EquipmentSocket"]
visible = false

[node name="shoot" type="AnimationPlayer" parent="."]

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_frame_changed"]
[connection signal="body_shape_entered" from="AttackArea" to="." method="_on_attack_area_body_shape_entered"]
